# osg_3dgs

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.MD  README.md  main.cpp  mainwindow.cpp  mainwindow.h
.claude/: settings.local.json
osg/: GaussianDrawObj.cpp  GaussianDrawObj.h  osgWindow.cpp  osgWindow.h
shader/: gaussian.frag  gaussian.vert  point.frag  point.vert
tools/: tool.h  tools.cpp  tools.h
